# webserv

./: .gitignore  CMakeLists.txt  Makefile  ParseConfigFile.cpp  ParseConfigFile.hpp  README.md  Request.hpp  Route.hpp  VirtualServer.cpp  VirtualServer.hpp  WebServ.cpp  WebServ.hpp  default.conf  default_for_linux.conf  hello  index.html  main.cpp  webserv
123/: .gitignore  README.md
123/lagoona/: manage.py
123/lagoona/lagoona/: settings.py  wsgi.py
123/lagoona/lagoona_app/: apps.py  forms.py  models.py  urls.py
123/lagoona/lagoona_app/migrations/: 0001_initial.py  0002_headermenu.py
123/lagoona/lagoona_app/templates/: index.html
Client/: Client.cpp  Client.hpp
HandlerHttpObject/: HandlerHttpObject.cpp  HandlerHttpObject.hpp
HttpObject/: HttpObject.cpp  HttpObject.hpp
HttpRequest/: HttpRequest.cpp  HttpRequest.hpp
HttpResponse/: HttpResponse.cpp  HttpResponse.hpp
Location/: Location.cpp  Location.hpp
ParseConfigFile/: ParseConfigFile.cpp  ParseConfigFile.hpp
Request/: Request.cpp  Request.hpp
Response/: Response.cpp  Response.hpp
Route/: Route.cpp  Route.hpp
ThreadPool/: ThreadPool.cpp  ThreadPool.hpp
VirtualServer/: VirtualServer.cpp  VirtualServer.hpp
WebServ/: WebServ.cpp  WebServ.hpp  WebServ_cgi.cpp  WebServ_default_handler.cpp  WebServ_handlers.cpp  WebServ_page_generators.cpp  WebServ_parsing_request.cpp  WebServ_workers.cpp  WebServer_workers.cpp
YoupiBanane/Yeah/: .htaccess
bytes/: bytes.cpp  bytes.hpp
configs_for_tests/: config_with_error_page.conf  config_with_limit_client_body_size.conf  error_page.conf  limit_client_body_size.conf  multiple_same_port.conf  multiple_servers_with_different_host_name.conf  multiple_servers_with_different_port.conf  multiply_equal_server.conf  same_port.conf  setup_routes_with_different_directories.conf
exceptions/: ResponseException.cpp  ResponseException.hpp  exceptions.cpp  exceptions.hpp
includes/: libft.hpp
lagoona/lagoona/: asgi.py  urls.py
lagoona/lagoona_app/: views.py
lagoona/lagoona_app/migrations/: 0003_auto_20200706_2237.py  0004_hotel_rating.py
lagoona/lagoona_app/static/css/: style.css
lagoona/srcs/css/: normalize.css  style.css
libft/: ft_atoi.cpp  ft_decode64base.cpp  ft_getdate.cpp  ft_getfile.cpp  ft_getline.cpp  ft_hton.cpp  ft_itoa.cpp  ft_localtime.cpp  ft_memcopy.cpp  ft_memcpy.cpp  ft_memset.cpp  ft_realloc.cpp  ft_strdup.cpp  ft_string.cpp  ft_strjoin.cpp  ft_strlen.cpp  ft_tolower.cpp  get_next_line.cpp
src/: main.cpp
src/Client/: Client.hpp
src/HttpObject/: HttpObject.cpp  HttpObject.hpp
src/HttpResponse/: HttpResponse.cpp  HttpResponse.hpp
src/ParseConfigFile/: ParseConfigFile.cpp  ParseConfigFile.hpp
src/ThreadPool/: ThreadPool.cpp  ThreadPool.hpp
src/VirtualServer/: VirtualServer.cpp  VirtualServer.hpp
src/WebServ/: WebServ.cpp  WebServ_cgi.cpp  WebServ_handlers.cpp  WebServ_workers.cpp
src/includes/: libft.hpp
src/libft/: ft_atoi.cpp  ft_getfile.cpp  ft_hton.cpp  ft_memset.cpp  ft_strdup.cpp  ft_strlen.cpp
static_files/: math.html
static_files/cgi_bin/: html.py  some.php
